[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
any_chunk = { path = "any_chunk" }
promptize = { path = "promptize" }
derive_debug = { path = "debug" }
seq = { path = "seq" }
sorted = { path = "sorted" }
